--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #E5E7EB;
+}
+
 header {
     display: flex;
     flex-direction: column;
@@ -16,14 +20,15 @@ header {
 
 .header-up,
 .header-down {
+    display: flex;
+    justify-content: space-between;
     max-width: 1536px;
 }
 
 .header-up {
     gap: 24px;
-    display: flex;
-    justify-content: space-between;
 }
+
 
 .header-up__left--icon {
     display: flex;
@@ -52,11 +57,6 @@ header {
     display: flex;
     flex-direction: column;
     gap: 4px;
-}
-
-.header-down {
-    display: flex;
-    justify-content: space-between;
 }
 
 .header-down__menu--left {
