--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: 'Formular', sans-serif;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 body {
@@ -66,39 +67,80 @@ header {
     gap: 24px;
 }
 
-.delivery-block__left, .delivery-block__right{
-    width: 756px;
+.delivery-block__left,
+.delivery-block__right {
     flex: 1;
+    max-width: 756px;
 }
 
-.delivery-block__left>img{
+.delivery-block__left>img {
     height: 352px;
     border-radius: 16px;
     transform: scaleX(-1);
     object-fit: cover;
 }
 
-.delivery-block__left>h1{
+.delivery-block__left>h1 {
     text-align: left;
 }
 
-.delivery-block__left>p{
+.delivery-block__left>p {
     padding-top: 12px;
     padding-bottom: 16px;
 }
 
-.delivery-block__left{
+.delivery-block__left {
     display: flex;
     width: 100%;
     flex-direction: column;
-    gap: 12px;
 }
 
-.delivery-container{
+.delivery {
+    width: 100%;
+}
+
+.delivery-container {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 72px 192px;
     gap: 24px;
+}
+
+.delivery-block__right {
+    background-color: #F9FAFB;
+    border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 28px;
+    padding: 24px 27px;
+}
+
+.delivery-block__right--text {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.delivery-block__right-calc {
+    max-width: max-content;
+    width: 100%;
+    display: grid;
+    text-align: center;
+    gap: 24px;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.delivery-block__right-calc input:first-child,
+.delivery-block__right-calc button {
+    grid-column: span 2;
+}
+
+.delivery-block__right-calc input {
+    border-radius: 4px;
+    padding: 12px;
+    border: 2px solid;
 }
 
 .text {
@@ -126,6 +168,15 @@ header {
     text-align: right;
     padding-right: 12px;
     border-right: 1px #A78BFA solid;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.text-3xl {
+    font-size: 30px;
+    line-height: 36px;
 }
 
 .btn {
