--- a/style.css
+++ b/style.css
@@ -19,6 +19,17 @@ header {
     width: 100%;
 }
 
+main {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    gap: 72px;
+    padding-top: 72px;
+    padding-left: 192px;
+    padding-right: 192px;
+}
+
 .header-up,
 .header-down {
     display: flex;
@@ -103,7 +114,6 @@ header {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 72px 192px;
     gap: 24px;
 }
 
