--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ main {
 .header-up,
 .header-down {
     display: flex;
+    width: 100%;
+    align-items: center;
     justify-content: space-between;
     max-width: 1536px;
 }
@@ -108,6 +110,7 @@ main {
 
 .delivery {
     width: 100%;
+    max-width: 1536px;
 }
 
 .delivery-container {
@@ -151,6 +154,40 @@ main {
     border-radius: 4px;
     padding: 12px;
     border: 2px solid;
+}
+
+.advantage {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.advantage-container {
+    width: 100%;
+    max-width: 1536px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 24px;
+}
+
+.advantage-block {
+    align-items: center;
+    width: 496px;
+    display: flex;
+    padding: 24px;
+    gap: 12px;
+}
+
+.advantage-block img {
+    width: 136px;
+    height: 136px;
+}
+
+.advantage-block--text {
+    display: flex;
+    width: 300px;
+    flex-direction: column;
+    gap: 12px;
 }
 
 .text {
@@ -208,6 +245,11 @@ main {
 .text-xl {
     font-size: 20px;
     line-height: 28px;
+}
+
+.text-small {
+    font-size: 14px;
+    line-height: 20px;
 }
 
 .text-4xl {
