--- a/style.css
+++ b/style.css
@@ -156,7 +156,8 @@ main {
     border: 2px solid;
 }
 
-.advantage {
+.advantage,
+.guarantees {
     display: flex;
     flex-direction: column;
     gap: 24px;
@@ -190,6 +191,51 @@ main {
     gap: 12px;
 }
 
+.guarantees {
+    align-items: center;
+    width: 100%;
+}
+
+.guarantees--text {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+}
+
+.guarantees--text p {
+    max-width: 756px;
+}
+
+.guarantees--galary {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    gap: 24px;
+}
+
+.guarantees--block {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
+}
+
+.guarantees--block img {
+    width: 366px;
+    height: 375px;
+    object-fit: contain;
+}
+
+.guarantees>button {
+    margin-top: 36px;
+    width: 315px;
+    padding: 16px 28px;
+    border-radius: 12px;
+}
+
 .text {
     font: normal 400 16px/24px sans-serif;
     letter-spacing: 0;
@@ -201,6 +247,11 @@ main {
     font-size: 24px;
     line-height: 32px;
     color: #111827;
+}
+
+.text-large {
+    font-size: 18px;
+    line-height: 28px;
 }
 
 .text-light {
