--- a/style.css
+++ b/style.css
@@ -150,12 +150,6 @@ main {
     grid-column: span 2;
 }
 
-.delivery-block__right-calc input {
-    border-radius: 4px;
-    padding: 12px;
-    border: 2px solid;
-}
-
 .advantage,
 .guarantees {
     display: flex;
@@ -171,7 +165,7 @@ main {
     gap: 24px;
 }
 
-.advantage-block {
+.advantage-container__block {
     align-items: center;
     width: 496px;
     display: flex;
@@ -179,12 +173,12 @@ main {
     gap: 12px;
 }
 
-.advantage-block img {
+.advantage-container__block img {
     width: 136px;
     height: 136px;
 }
 
-.advantage-block--text {
+.advantage-container__block--text {
     display: flex;
     width: 300px;
     flex-direction: column;
@@ -215,7 +209,7 @@ main {
     gap: 24px;
 }
 
-.guarantees--block {
+.guarantees--galary--block {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -223,7 +217,7 @@ main {
     gap: 4px;
 }
 
-.guarantees--block img {
+.guarantees--galary--block img {
     width: 366px;
     height: 375px;
     object-fit: contain;
@@ -236,8 +230,113 @@ main {
     border-radius: 12px;
 }
 
+.review {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    padding-left: 23px;
+    padding-right: 23px;
+    gap: 47px;
+    width: 100%;
+    max-width: 1536px;
+}
+
+.review>img {
+    justify-content: center;
+    cursor: pointer;
+    flex-shrink: 0;
+    display: block;
+    width: 60px;
+    height: 60px;
+}
+
+.review>img:last-child {
+    transform: rotate(180deg);
+}
+
+.review-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+}
+
+.review-container__quotes {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+}
+
+.review-container__quote {
+    border-radius: 16px;
+    max-width: 626px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    gap: 30px;
+    padding: 32px 43px;
+    background-color: #F9FAFB;
+}
+
+.review-container__quote>img {
+    width: 75px;
+    height: 75px;
+    position: absolute;
+    right: 18px;
+    bottom: 40px;
+    opacity: 0.95;
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    width: 100%;
+    max-width: 1536px;
+    align-items: center;
+    background-color: #F9FAFB;
+    padding: 64px;
+    border-radius: 16px;
+}
+
+.contact-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    width: 100%;
+    max-width: 497px;
+}
+
+.contact-container textarea {
+    grid-column: span 2;
+    width: auto;
+    resize: none;
+}
+
+.contact button {
+    width: 100%;
+    max-width: 497px;
+}
+
+input {
+    border-radius: 4px;
+    padding: 12px;
+    border: 2px solid;
+}
+
+textarea {
+    border-radius: 4px;
+    padding: 12px;
+    border: 2px solid;
+    height: 150px;
+}
+
 .text {
-    font: normal 400 16px/24px sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
     letter-spacing: 0;
     color: #111827;
 }
