--- a/style.css
+++ b/style.css
@@ -67,7 +67,8 @@ main {
     display: none;
 }
 
-.header-up__right-phone, .footer-up__right-phone {
+.header-up__right-phone,
+.footer-up__right-phone {
     padding-left: 12px;
     display: flex;
     flex-direction: column;
@@ -359,9 +360,12 @@ footer {
     height: 13.33px;
 }
 
-.text-xs {
-    font-size: 12px;
-    line-height: 16px;
+.footer-down {
+    color: #4B5563;
+}
+
+.footer-down--text__right span {
+    text-decoration: underline;
 }
 
 input {
@@ -384,6 +388,11 @@ textarea {
     letter-spacing: 0;
 }
 
+.text-xs {
+    font-size: 12px;
+    line-height: 16px;
+}
+
 .text-2xl {
     letter-spacing: 0;
     font-size: 24px;
@@ -403,10 +412,13 @@ textarea {
     display: none;
 }
 
-.text-right {
-    text-align: right;
+.text-divider {
     padding-right: 12px;
     border-right: 1px #A78BFA solid;
+}
+
+.text-right {
+    text-align: right;
 }
 
 .text-center {
