--- a/style.css
+++ b/style.css
@@ -639,12 +639,9 @@ textarea {
         display: flex;
         font-size: 14px;
         line-height: 20px;
-        justify-content: space-between;
         align-items: center;
-        vertical-align: middle;
-        flex-direction: row;
-        padding: 4px;
         gap: 8px;
+        width: 100%;
     }
 
     .text-row span {
@@ -660,6 +657,20 @@ textarea {
         justify-content: space-between;
         padding-top: 12px;
         padding-bottom: 12px;
+    }
+    .delivery-block__left{
+        flex-direction: column;
+        align-items: center;
+        letter-spacing: 0.9rem;
+        max-width: 768px;
+    }
+
+    .delivery-block__left--text, .delivery-block__left img{
+        width: 100%;
+    }
+
+    .delivery-container{
+        align-items: center;
     }
 }
 
